added screenshots to user documentation

--- a/doc/cs/user-doc.tex
+++ b/doc/cs/user-doc.tex
@@ -40,7 +40,7 @@ Pro ilustraci uvedeme příklad s otázkou, která je hodnocena šesti body, a o
 Dále mohou administrátoři přidělovat studentům i známky, které se nevážou k žádnému testu, což můžeme využít například k reprezentaci známek za aktivitu v hodině.
 Aplikace používá k hodnocení procenta, jednotlivé testy a známky mohou mít různou váhu. 
 
-Na obrázku (screenshot) vidíme uživatelské rozhraní aplikace.
+Na obrázku \ref{fig:login} vidíme uživatelské rozhraní aplikace.
 
 \vspace{\baselineskip}
 
@@ -58,7 +58,7 @@ Následující podkapitoly obsahují jednotlivé uživatelské scénáře rozeps
 
 \begin{itemize}
 	\item Pro přihlášení uživatele nejprve stiskneme tlačítko Login v horním menu.
-	\item Zobrazí se přihlašovací formulář, do kterého vyplníme e-mail a heslo. (screenshot)
+	\item Zobrazí se přihlašovací formulář, do kterého vyplníme e-mail a heslo, jak můžeme vidět na obrázku \ref{fig:login}
 	\item Po odeslání formuláře nás aplikace přihlásí a přesměruje na stránku se seznamem kurzů.
 	\item Pokud se následně chceme odhlásit, vybereme v menu volbu Logout.
 \end{itemize}
@@ -66,7 +66,7 @@ Následující podkapitoly obsahují jednotlivé uživatelské scénáře rozeps
 \subsection{Zobrazení stránky se seznamem kurzů}
 
 \begin{itemize}
-	\item Po kliknutí na odkaz Courses v menu se zobrazí stránka, na které se nachází seznam kurzů. (screenshot)
+	\item Po kliknutí na odkaz Courses v menu se zobrazí stránka, na které se nachází seznam kurzů. (viz. obrázek \ref{fig:courses-list})
 	\item Na této stránce se nachází několik sekcí. Sekce Member courses obsahuje všechny kurzy, jejichž jsme členy. Po kliknutí na odkaz s názvem kurzu se dostaneme na stránku s detaily kurzu.
 	\item Sekce Managed courses obsahuje všechny kurzy, které spravujeme (tzn. jsme administrátoři). Kliknutím na odkaz s názvem kurzu se opět dostaneme na stránku s detaily kurzu. Každý z těchto kurzů můžeme také smazat -- kliknutím na tlačíko "Delete" vedle názvu kurzu.
 	\item Dále se na této stránce nachází sekce, které slouží k přidání nového kurzu a zápisu do kurzu (více viz. dále). Úplně dole je pak sekce, ve které můžeme vidět náš uživatelský identifikátor.
@@ -92,7 +92,7 @@ Následující podkapitoly obsahují jednotlivé uživatelské scénáře rozeps
 
 \begin{itemize}
 	\item Po kliknutí na kurz v seznamu kurzů se dostaneme na stránku s detaily.
-	\item Úplně nahoře vidíme sekci s názvem kurzu (screenshot), ve které se zároveň nachází identifikátor tohoto kurzu, který se používá při zápisu do kurzu. Členové kurzu zde také vidí tlačítko s textem 'My Grades', pomocí kterého se dostanou na stránku s hodnocením studenta.
+	\item Úplně nahoře vidíme sekci s názvem kurzu (viz. obrázek \ref{fig:course-detail}) , ve které se zároveň nachází identifikátor tohoto kurzu, který se používá při zápisu do kurzu. Členové kurzu zde také vidí tlačítko s textem 'My Grades', pomocí kterého se dostanou na stránku s hodnocením studenta.
 	\item Pod touto sekcí se nachází seznam testů, rozdělený do tří kategorií:
 		\begin{itemize}
 			\item Not Published -- tyto testy zatím nebyly publikované, mohou si je zobrazit pouze administrátoři.
@@ -115,7 +115,7 @@ Následující podkapitoly obsahují jednotlivé uživatelské scénáře rozeps
 
 \begin{itemize}
 	\item Na stránku s detaily studenta se můžeme dostat ze stránky s detaily kurzu. Studenti si stránku mohou zobrazit pomocí tlačítka 'My Grades', administrátoři se sem dostanou pomocí kliknutí na detail studenta v sekci s členy kurzu.
-	\item Na obrázku (screenshot), vidíme, že na této stránce se nachází komponenty s hodnocením daného studenta. 
+	\item Na obrázku \ref{fig:student-detail}, vidíme, že na této stránce se nachází komponenty s hodnocením daného studenta. 
 	\item Nachází se zde tabulka s odevzdanými testy, po kliknutí na název testu se dostaneme na stránku s vyhodnoceným řešením. U každého testu pak vidíme získané skóre, váhu testu (tedy dopad na celkovou známku), datum a čas odevzdání. Poslední sloupec nám říká, jestli bylo odevzdané řešení již revidované
 	\item Pod seznamem odevzdaných testů se nachází komponenta s dalšími známkami. Tyto známky nepatří k žádnému testu. 
 	\item Na stránce se dále nachází sekce s celkovým skóre studenta, ve které můžeme vidět vážený průměr všech jeho známek.
@@ -128,7 +128,7 @@ Následující podkapitoly obsahují jednotlivé uživatelské scénáře rozeps
 \begin{itemize}
 	\item Nejprve přejdeme na stránku nějakého kurzu, jehož jsme členy.
 	\item V seznamu testů vybereme ten, který chceme odevzdat.
-	\item Pokud jsme tento test zatím neodevzdali, aplikace nás přesměruje na stránku s odevzdáním daného testu (screenshot). V případě, že jsme test již odevzdali, zobrazí se stránka s vyhodnoceným řešením.
+	\item Pokud jsme tento test zatím neodevzdali, aplikace nás přesměruje na stránku s odevzdáním daného testu, jak můžeme vidět na obrázku \ref{fig:test-submit}. V případě, že jsme test již odevzdali, zobrazí se stránka s vyhodnoceným řešením.
 	\item V horní části vidíme název testu, deadline -- čas, do kterého je třeba test odevzdat a několik dalších informací. Test následně vyplníme, u některých otázek máme na výběr z možností odpovědí.
 	\item Stisknutím tlačítka Save answers dojde k uložení odpovědí. Můžeme tedy stránku opustit, příp. zavřít a při dalším načtení stránky se načtou i uložené odpovědi.
 	\item Odevzdání testu provádíme pomocí tlačítka Submit. Tato akce je nevratná, po odevzdání testu jej není možné nijak upravovat ani znovu odevzdat.
@@ -138,7 +138,7 @@ Následující podkapitoly obsahují jednotlivé uživatelské scénáře rozeps
 \subsection{Zobrazení vyhodnoceného testu}
 
 \begin{itemize}
-	\item (screenshot)
+	\item Na obrázku \ref{fig:submission-review} vidíme příklad stránky s vyhodnoceným řešením testu.
 	\item Ve vrchní části stránky je komponenta s informacemi o testu. Nachází se zde název testu, informace o tom, jestli je test hodnocený a přesný čas odeslání. Pokud byl test již revidován, nachází se zde i řetězec 'Reviewed'. 
 	\item Na stránce se dále nachází seznam otázek. U každé otázky se zobrazuje text, udělené body, odeslaná a správná odpověď, a případně i komentář opravujícího.
 	\item Pozadí otázky může mít různé barvy, podle toho, kolik bodů student z otázky získal.
@@ -153,7 +153,7 @@ Následující podkapitoly obsahují jednotlivé uživatelské scénáře rozeps
 
 \subsection{Postranní menu s názvem kurzu}
  \begin{itemize}
- 	\item Můžeme si všimnout, že na některých stránkách (například detail studenta, detail testu, apod.) se zobrazuje postranní menu s názvem kurzu. (screenshot)
+ 	\item Můžeme si všimnout, že na některých stránkách (například detail testu, detail studenta, jak můžeme vidět na obrázku \ref{fig:side-menu}) se zobrazuje postranní menu s názvem kurzu.
  	\item Pomocí odkazu v tomto menu se můžeme kdykoliv vrátit zpět na stránku příslušného kurzu.
  \end{itemize}
 
@@ -164,7 +164,7 @@ Následující akce mohou vykonávat pouze administrátoři příslušného kurz
 
  \begin{itemize}
 	\item Přejdeme na stránku daného kurzu.
-	\item Pod sekcí se soubory se nachází komponenty, které obsahují seznamy studentů a administrátorů tohoto kurzu. (screenshot)
+	\item Pod sekcí se soubory se nachází komponenty, které obsahují seznamy studentů a administrátorů tohoto kurzu (viz. obrázek \ref{fig:students-admins-list}). 
 	\item Pomocí tlačítka Details můžeme přejít na stránku s detaily tohoto studenta, naopak tlačítko Remove slouží k odstranění osoby z kurzu.
 	\item Pod seznamem studentů se nachází tlačítko Enrollment Requests, které nám umožňuje zobrazit všechny žádostí o zapsání do tohoto kurzu.
 	\item Komponenta s administrátory vypadá podobně, tlačítko Remove slouží k odebrání daného administrátora.
@@ -192,7 +192,7 @@ Následující akce mohou vykonávat pouze administrátoři příslušného kurz
 \subsection{Potvrzení / zamítnutí žádosti o zápis do kurzu}
 \begin{itemize}
 	\item Přejdeme na stránku daného kurzu, najdeme sekci se studenty a klikneme na tlačítko Enrollment requests.
-	\item Aplikace nás přesměruje na stránku, kde se nachází všechny žádosti o zapsání do tohoto kurzu (screenshot).
+	\item Aplikace nás přesměruje na stránku, kde se nachází všechny žádosti o zapsání do tohoto kurzu (viz. obrázek \ref{fig:enrollment-requests}).
 	\item U každé žádosti je uveden e-mail osoby a tlačítka pro potvrzení resp. zamítnutí žádosti.
 	\item Pomocí těchto tlačítek můžeme žádost přijmout nebo zamítnout. Pokud žádost přijmeme, aplikace osobu automaticky přidá mezi studenty daného kurzu.
 \end{itemize}
@@ -203,7 +203,7 @@ Následující akce mohou vykonávat pouze administrátoři příslušného kurz
 	\item Přejdeme na stránku daného kurzu, najdeme sekci se seznamem testů a klikneme na tlačítko Create new assignment.
 	\item Zobrazí se formulář sloužící k vytvoření testu. 
 	\item Do příslušných políček formuláře vyplníme téma, váhu, deadline a počet otázek testu. Je potřeba také zvolit, jestli se jedná o hodnocený test nebo o kvíz. V případě, že chceme vytvořit hodnocený test, zvolíme hodnotu Yes v otázce Is this assignment graded?.
-	\item Po stisknutí tlačítka Apply se zobrazí formuláře pro jednotlivé otázky, jak vidíme na obrázku (screenshot)
+	\item Po stisknutí tlačítka Apply se zobrazí formuláře pro jednotlivé otázky, jak můžeme vidět na obrázku \ref{fig:test-create}.
 	\item V případě, že následně chceme změnit počet otázek, změníme hodnotu políčka Question count a potvrdíme stiskem tlačítka Apply.
 	\item U každé otázky je nejprve potřeba vybrat typ odpovědí. Máme na výběr z těchto hodnot:
 		\begin{itemize}
@@ -214,7 +214,7 @@ Následující akce mohou vykonávat pouze administrátoři příslušného kurz
 	\item Do příslušného políčka vyplníme text otázky. V případě, že se jedná o otázku s výběrem odpovědí, je potřeba vybrat počet možných odpovědí a potvrdit pomocí tlačítka Apply. Poté se zobrazí políčka pro jednotlivé možné odpovědi, označené písmenem. Do těchto políček vyplníme text možných odpovědí. Maximální počet možných odpovědí je deset.
 	\item Vyplníme správnou odpověď otázky a počet bodů za tuto otázku. V případě, že se jedná o otázku s výběrem odpovědi, jako správnou odpověď zadáme jedno písmeno -- identifikátor možnosti, která je správná. 
 	
-	Pokud jde o otázku s vícenásobným výběrem odpovědí, do políčka pro správnou odpověď zadáme seznam písmen pravdivých možností, oddělených čárkou. Tedy například, pokud máme otázku se správnými odpověďmi A a C, do políčka pro správnou odpověď zadáme řetězec 'A,C'. Pokud je pravdivá pouze jedna odpověď, zadáme pouze jedno písmeno, naopak pokud není pravdivá žádná z odpovědí, necháme políčka pro správnou odpověď prázdné. Ilustrační příklad je na obrázku (screenshot).
+	Pokud jde o otázku s vícenásobným výběrem odpovědí, do políčka pro správnou odpověď zadáme seznam písmen pravdivých možností, oddělených čárkou. Tedy například, pokud máme otázku se správnými odpověďmi A a C, do políčka pro správnou odpověď zadáme řetězec 'A,C'. Pokud je pravdivá pouze jedna odpověď, zadáme pouze jedno písmeno, naopak pokud není pravdivá žádná z odpovědí, necháme políčka pro správnou odpověď prázdné. Ilustrační příklad je na obrázku \ref{fig:question-detail}.
 	\item Vytvoření testu potvrdíme stisknutím tlačítka Create v dolní části stránky.
 	\item Aplikace nás poté přesměruje zpět na stránku příslušného kurzu.
 \end{itemize}
@@ -223,16 +223,16 @@ Následující akce mohou vykonávat pouze administrátoři příslušného kurz
 \begin{itemize}
 	\item Přejdeme na stránku daného kurzu, najdeme sekci s testy a klikneme na požadovaný test.
 	\item Pokud jsme administrátorem daného kurzu, aplikace nás přesměruje na stránku s detailem testu.
-	\item Jak můžeme vidět na obrázku (screenshot), stránka obsahuje informace o daném testu a seznam otázek.
+	\item Na obrázku \ref{fig:test-detail} vidíme, že stránka obsahuje informace o daném testu a seznam otázek.
 	\item V případě, že tento test ještě nebyl publikován, se zobrazí tlačítko, které umožňuje editaci.
 	\item Pokud je test již publikován, ve spodní části stránky se zobrazí sekce Submitted solutions, která obsahuje seznam odeslaných řešení tohoto testu.
-	\item Na obrázku (screenshot) vidíme, že u každého odeslaného řešení se zobrazuje e-mail studenta, který řešení odevzdal, skóre, čas odeslání a informace o tom, jestli bylo dané řešení již revidované. Kliknutím na tlačítko detail se dostaneme na stránku s vyhodnoceným řešením.
+	\item Na obrázku \ref{fig:test-detail} vidíme, že u každého odeslaného řešení se zobrazuje e-mail studenta, který řešení odevzdal, skóre, čas odeslání a informace o tom, jestli bylo dané řešení již revidované. Kliknutím na tlačítko detail se dostaneme na stránku s vyhodnoceným řešením.
 \end{itemize}
 
 \subsection{Editace testu}
 \begin{itemize}
 	\item Přejdeme na stránku s detailem daného testu a klikneme na tlačítko s textem Edit. Testy, které již byly publikované, editovat nelze.
-	\item Zobrazí se formulář, sloužící k úpravě testu. Na obrázku (screenshot) vidíme, že vypadá téměř stejně jako formulář pro vytvoření testu.
+	\item Zobrazí se formulář, sloužící k úpravě testu. Na obrázcích \ref{fig:test-edit1} a \ref{fig:test-edit2} vidíme, že vypadá téměř stejně jako formulář pro vytvoření testu.
 	\item V případě, že chceme upravit hodnotu deadline, klikneme na tlačítko Set new deadline a vyplníme příslušné hodnoty. Pomocí tlačítka Cancel aktualizaci hodnoty deadline zrušíme.
 	\item Upravíme požadované hodnoty, pro přidání nové otázky stiskneme tlačítko Add new question, jež se nachází ve spodní části stránky. Pokud chceme nějakou z otázek odebrat, klikneme na tlačítko Delete question.
 	\item Úplně dole se nachází tlačítka pro potvrzení, resp. zrušení změn. Pokud chceme změny potvrdit, stiskneme tlačítko Save, pro zahození změn stiskneme tlačítko Discard.
@@ -259,7 +259,7 @@ Následující akce mohou vykonávat pouze administrátoři příslušného kurz
 	\item U vybraného řešení klikneme na tlačítko Detail, tím se dostaneme na stránku s vyhodnoceným řešením.
 	\item Ve spodní část stránky se nachází sekce Review.
 	\item V případě, že nechceme upravit body, ani přidat žádné komentáře, klikneme na tlačítko Mark as reviewed, tím označíme test jako revidovaný.
-	\item Pokud chceme upravit body, či přidat komentáře, stiskneme tlačítko Update. U každé otázky se zobrazí formuláře sloužící k úpravě bodů a přidání komentáře. (screenshot)
+	\item Pokud chceme upravit body, či přidat komentáře, stiskneme tlačítko Update. U každé otázky se zobrazí formuláře sloužící k úpravě bodů a přidání komentáře, jak můžeme vidět na obrázku \ref{fig:submission-manual-review}.
 	\item Vyplníme požadované změny (např. změníme počet získaných bodů u vybrané otázky).
 	\item Pod otázkami se nachází tlačítka pro potvrzení, resp. zrušení změn. Pokud chceme změny potvrdit, stiskneme tlačítko Save, pro zahození změn klikneme na tlačítko Discard.
 	\item Aplikace provede požadovanou akci a změny uloží, resp. zahodí.
@@ -268,8 +268,120 @@ Následující akce mohou vykonávat pouze administrátoři příslušného kurz
 \subsection{Vytvoření nové známky}
 \begin{itemize}
 	\item Přejdeme na stránku s detailem studenta.
-	\item Pod komponentou s celkovým skóre se nachází formulář pro přidání nové známky. (screenshot)
+	\item Pod komponentou s celkovým skóre se nachází formulář pro přidání nové známky (viz. obrázek \ref{fig:grade-add}).
 	\item Vyplníme téma, skóre, váhu a případně i komentář a následně formulář potvrdíme.
 	\item Dojde k vytvoření nové známky, která se přidá do tabulky známek.
 	\item Pokud chceme nějakou ze známek následně smazat, stiskneme příslušné tlačítko Remove.
 \end{itemize}
+
+\begin{figure}
+	\centering
+	\includegraphics[width=\textwidth]{login-page.PNG}
+	\caption{Stránka s přihlášením}
+	\label{fig:login}
+\end{figure}
+
+\begin{figure}
+	\centering
+	\includegraphics[width=\textwidth]{courses-list.PNG}
+	\caption{Stránka se seznamem kurzů}
+	\label{fig:courses-list}
+\end{figure}
+
+\begin{figure}
+	\centering
+	\includegraphics[width=\textwidth]{course-detail.PNG}
+	\caption{Stránka s detailem kurzu}
+	\label{fig:course-detail}
+\end{figure}
+
+\begin{figure}
+	\centering
+	\includegraphics[width=\textwidth]{student-detail.PNG}
+	\caption{Stránka s detailem studenta}
+	\label{fig:student-detail}
+\end{figure}
+
+\begin{figure}
+	\centering
+	\includegraphics[width=\textwidth]{test-submit.PNG}
+	\caption{Stránka s odevzdáním testu}
+	\label{fig:test-submit}
+\end{figure}
+
+\begin{figure}
+	\centering
+	\includegraphics[width=\textwidth]{submission-review.PNG}
+	\caption{Zobrazení vyhodnoceného testu}
+	\label{fig:submission-review}
+\end{figure}
+
+\begin{figure}
+	\centering
+	\includegraphics[width=\textwidth]{side-menu.PNG}
+	\caption{Postranní menu}
+	\label{fig:side-menu}
+\end{figure}
+
+\begin{figure}
+	\centering
+	\includegraphics[width=\textwidth]{students-admins-list.PNG}
+	\caption{Seznam studentů a administrátorů}
+	\label{fig:students-admins-list}
+\end{figure}
+
+\begin{figure}
+	\centering
+	\includegraphics[width=\textwidth]{enrollment-requests.PNG}
+	\caption{Seznam žádostí o zápis do daného kurzu}
+	\label{fig:enrollment-requests}
+\end{figure}
+
+\begin{figure}
+	\centering
+	\includegraphics[width=\textwidth]{test-create.PNG}
+	\caption{Vytvoření testu}
+	\label{fig:test-create}
+\end{figure}
+
+\begin{figure}
+	\centering
+	\includegraphics[width=\textwidth]{test-detail.PNG}
+	\caption{Stránka s detaily testu}
+	\label{fig:test-detail}
+\end{figure}
+
+\begin{figure}
+	\centering
+	\includegraphics[width=\textwidth]{question-detail.PNG}
+	\caption{Vzorová otázka}
+	\label{fig:question-detail}
+\end{figure}
+
+\begin{figure}
+	\centering
+	\includegraphics[width=\textwidth]{edit-test1.PNG}
+	\caption{Editace testu, část 1}
+	\label{fig:test-edit1}
+\end{figure}
+
+\begin{figure}
+	\centering
+	\includegraphics[width=\textwidth]{edit-test2.PNG}
+	\caption{Editace testu, část 2}
+	\label{fig:test-edit2}
+\end{figure}
+
+\begin{figure}
+	\centering
+	\includegraphics[width=\textwidth]{submission-manual-review.PNG}
+	\caption{Manuální oprava odeslaného řešení}
+	\label{fig:submission-manual-review}
+\end{figure}
+
+\begin{figure}
+	\centering
+	\includegraphics[width=\textwidth]{add-grade.PNG}
+	\caption{Formulář pro přidání známky}
+	\label{fig:grade-add}
+\end{figure}
