--- a/doc/cs/user-doc.tex
+++ b/doc/cs/user-doc.tex
@@ -40,7 +40,12 @@ Pro ilustraci uvedeme příklad s otázkou, která je hodnocena šesti body, a o
 Dále mohou administrátoři přidělovat studentům i známky, které se nevážou k žádnému testu, což můžeme využít například k reprezentaci známek za aktivitu v hodině.
 Aplikace používá k hodnocení procenta, jednotlivé testy a známky mohou mít různou váhu. 
 
-Na obrázku \ref{fig:login} vidíme uživatelské rozhraní aplikace.
+Na obrázku \ref{fig:login} vidíme uživatelské rozhraní aplikace. 
+
+Všechny akce, které zahrnují mazání jsou nevratné -- pokud nějaký objekt smažeme, už jej není možné obnovit. Před každou takovou akcí se zobrazí potvrzovací formulář, který vidíme na obrázku \ref{fig:confirm-dialog}. 
+Pro potvrzení akce stiskněte tlačítko \textit{Confirm}, jež vyvolá danou akci. Kliknutím na tlačítko \textit{Cancel} nebo zavřením formuláře se akce zruší, nedojde tedy ke smazání objektu.
+
+Všechna data, která přichází na server jsou validována (pomocí atributů). V případě, že validace selže, aplikace zobrazí formulář s chybami. Příklad tohoto formuláře je na obrázku \ref{fig:error-dialog}, v tomto případě jsme se pokusili vytvořit známku se zápornou vahou a bez uvedeného tématu.
 
 \vspace{\baselineskip}
 
@@ -49,42 +54,42 @@ Následující podkapitoly obsahují jednotlivé uživatelské scénáře rozeps
 \subsection{Registrace nového uživatele}
 
 \begin{itemize}
-	\item Pro registraci nového uživatele nejprve klikneme na tlačítko Register v horním menu.
-	\item Uživatelé v aplikaci jsou identifikováni pomocí e-mailu. Do registračního formuláře zadáme tedy e-mail a heslo nového uživatele, a stiskneme tlačítko Register.
-	\item Zobrazí se stránka s potvrzením registrace. Vzhledem k našim potřebám aktuálně neprovádíme ověření e-mailu. Pokud bychom chtěli tuto funkcionalitu přidat, můžeme postupovat například podle návodu v dokumentaci. \cite{AspNetCoreDocs} Klikneme na odkaz s textem 'Click here to confirm your account', a tím je registrace dokončena. Pomocí odkazu pak můžeme přejít na stránku s přihlášením.
+	\item Pro registraci nového uživatele nejprve klikneme na tlačítko \textit{Register} v horním menu.
+	\item Uživatelé v aplikaci jsou identifikováni pomocí e-mailu. Do registračního formuláře zadáme tedy e-mail a heslo nového uživatele, a stiskneme tlačítko \textit{Register}.
+	\item Zobrazí se stránka s potvrzením registrace. Vzhledem k našim potřebám aktuálně neprovádíme ověření e-mailu. Pokud bychom chtěli tuto funkcionalitu přidat, můžeme postupovat například podle návodu v dokumentaci. \cite{AspNetCoreDocs} Klikneme na odkaz s textem \textit{Click here to confirm your account}, a tím je registrace dokončena. Pomocí odkazu pak můžeme přejít na stránku s přihlášením.
 \end{itemize}
 
 \subsection{Přihlášení uživatele}
 
 \begin{itemize}
-	\item Pro přihlášení uživatele nejprve stiskneme tlačítko Login v horním menu.
+	\item Pro přihlášení uživatele nejprve stiskneme tlačítko \textit{Login} v horním menu.
 	\item Zobrazí se přihlašovací formulář, do kterého vyplníme e-mail a heslo, jak můžeme vidět na obrázku \ref{fig:login}
 	\item Po odeslání formuláře nás aplikace přihlásí a přesměruje na stránku se seznamem kurzů.
-	\item Pokud se následně chceme odhlásit, vybereme v menu volbu Logout.
+	\item Pokud se následně chceme odhlásit, vybereme v menu volbu \textit{Logout}.
 \end{itemize}
 
 \subsection{Zobrazení stránky se seznamem kurzů}
 
 \begin{itemize}
-	\item Po kliknutí na odkaz Courses v menu se zobrazí stránka, na které se nachází seznam kurzů. (viz. obrázek \ref{fig:courses-list})
-	\item Na této stránce se nachází několik sekcí. Sekce Member courses obsahuje všechny kurzy, jejichž jsme členy. Po kliknutí na odkaz s názvem kurzu se dostaneme na stránku s detaily kurzu.
-	\item Sekce Managed courses obsahuje všechny kurzy, které spravujeme (tzn. jsme administrátoři). Kliknutím na odkaz s názvem kurzu se opět dostaneme na stránku s detaily kurzu. Každý z těchto kurzů můžeme také smazat -- kliknutím na tlačíko "Delete" vedle názvu kurzu.
+	\item Po kliknutí na odkaz \textit{Courses} v menu se zobrazí stránka, na které se nachází seznam kurzů. (viz. obrázek \ref{fig:courses-list})
+	\item Na této stránce se nachází několik sekcí. Sekce \textit{Member courses} obsahuje všechny kurzy, jejichž jsme členy. Po kliknutí na odkaz s názvem kurzu se dostaneme na stránku s detaily kurzu.
+	\item Sekce \textit{Managed courses} obsahuje všechny kurzy, které spravujeme (tzn. jsme administrátoři). Kliknutím na odkaz s názvem kurzu se opět dostaneme na stránku s detaily kurzu. Každý z těchto kurzů můžeme také smazat -- kliknutím na tlačíko \textit{Delete} vedle názvu kurzu.
 	\item Dále se na této stránce nachází sekce, které slouží k přidání nového kurzu a zápisu do kurzu (více viz. dále). Úplně dole je pak sekce, ve které můžeme vidět náš uživatelský identifikátor.
 \end{itemize}
 
 \subsection{Vytvoření nového kurzu}
 
 \begin{itemize}
-	\item Na stránce se seznamem kurzů je sekce s názvem Add new course, která obsahuje formulář pro přidání nového kurzu.
-	\item Do políčka Name vyplníme jméno kurzu a klikneme na tlačítko Add.
+	\item Na stránce se seznamem kurzů je sekce s názvem \textit{Add new course}, která obsahuje formulář pro přidání nového kurzu.
+	\item Do políčka \textit{Name} vyplníme jméno kurzu a klikneme na tlačítko \textit{Add}.
 	\item Vytvoří se nový kurz, který má právě jednoho administrátora -- nás.
 \end{itemize}
 
 \subsection{Zápis do kurzu}
 
 \begin{itemize}
-	\item Nejprve přejdeme na stránku se seznamem kurzů a vybereme sekci Enroll to a course.
-	\item K přihlášení do kurzu je nejprve třeba znát jeho identifikátor, ten nám může například zaslat nějaký z administrátorů. Po získání identifikátoru jej vložíme do políčka s názvem 'Course ID' a formulář odešleme kliknutím na tlačítko Enroll.
+	\item Nejprve přejdeme na stránku se seznamem kurzů a vybereme sekci \textit{Enroll to a course}.
+	\item K přihlášení do kurzu je nejprve třeba znát jeho identifikátor, ten nám může například zaslat nějaký z administrátorů. Po získání identifikátoru jej vložíme do políčka s názvem \textit{Course ID} a formulář odešleme kliknutím na tlačítko \textit{Enroll}.
 	\item Tímto vytvoříme žádost o přihlášení do daného kurzu. Členem kurzu se staneme až poté, co nám žádost schválí některý z administrátorů.
 \end{itemize}
 
@@ -92,16 +97,16 @@ Následující podkapitoly obsahují jednotlivé uživatelské scénáře rozeps
 
 \begin{itemize}
 	\item Po kliknutí na kurz v seznamu kurzů se dostaneme na stránku s detaily.
-	\item Úplně nahoře vidíme sekci s názvem kurzu (viz. obrázek \ref{fig:course-detail}) , ve které se zároveň nachází identifikátor tohoto kurzu, který se používá při zápisu do kurzu. Členové kurzu zde také vidí tlačítko s textem 'My Grades', pomocí kterého se dostanou na stránku s hodnocením studenta.
+	\item Úplně nahoře vidíme sekci s názvem kurzu (viz. obrázek \ref{fig:course-detail}) , ve které se zároveň nachází identifikátor tohoto kurzu, který se používá při zápisu do kurzu. Členové kurzu zde také vidí tlačítko s textem \textit{My Grades}, pomocí kterého se dostanou na stránku s hodnocením studenta.
 	\item Pod touto sekcí se nachází seznam testů, rozdělený do tří kategorií:
 		\begin{itemize}
-			\item Not Published -- tyto testy zatím nebyly publikované, mohou si je zobrazit pouze administrátoři.
-			\item Active -- tyto testy jsou aktivní, aktuálně je lze odevzdávat.
-			\item After deadline -- testy, které již není možné odevzdat.
+			\item \textit{Not Published} -- tyto testy zatím nebyly publikované, mohou si je zobrazit pouze administrátoři.
+			\item \textit{Active} -- tyto testy jsou aktivní, aktuálně je lze odevzdávat.
+			\item \textit{After deadline} -- testy, které již není možné odevzdat.
 		\end{itemize}
-		Pokud některá z kategorií neobsahuje žádný test, tak se na stránce vůbec nezobrazuje. Studenti kurzu vidí pouze kategorii 'Active', zatímco administrátorům se zobrazují všechny tři výše uvedené kategorie.
+		Pokud některá z kategorií neobsahuje žádný test, tak se na stránce vůbec nezobrazuje. Studenti kurzu vidí pouze kategorii \textit{Active}, zatímco administrátorům se zobrazují všechny tři výše uvedené kategorie.
 		
-		U každého testu je uvedena informace, jestli je hodnocený (GRADED, příp. NOT GRADED) a případně i deadline.
+		U každého testu je uvedena informace, jestli je hodnocený (\textit{GRADED}, příp. \textit{NOT GRADED}) a případně i deadline.
 		Po kliknutí na název testu se student dostane buď na stránku s odevzdáním, anebo na stránku s vyhodnoceným řešením, pokud již test odevzdal. Administrátory kurzu aplikace přesměruje na stránku s detaily testu.
 		
 	\item Na stránce je dále sekce se sdílenými soubory, které si můžeme stáhnout. Správci kurzu zde vidí i formulář pro nahraní nového souboru.
@@ -114,7 +119,7 @@ Následující podkapitoly obsahují jednotlivé uživatelské scénáře rozeps
 \subsection{Zobrazení detailu studenta}
 
 \begin{itemize}
-	\item Na stránku s detaily studenta se můžeme dostat ze stránky s detaily kurzu. Studenti si stránku mohou zobrazit pomocí tlačítka 'My Grades', administrátoři se sem dostanou pomocí kliknutí na detail studenta v sekci s členy kurzu.
+	\item Na stránku s detaily studenta se můžeme dostat ze stránky s detaily kurzu. Studenti si stránku mohou zobrazit pomocí tlačítka \textit{My Grades}, administrátoři se sem dostanou pomocí kliknutí na detail studenta v sekci s členy kurzu.
 	\item Na obrázku \ref{fig:student-detail}, vidíme, že na této stránce se nachází komponenty s hodnocením daného studenta. 
 	\item Nachází se zde tabulka s odevzdanými testy, po kliknutí na název testu se dostaneme na stránku s vyhodnoceným řešením. U každého testu pak vidíme získané skóre, váhu testu (tedy dopad na celkovou známku), datum a čas odevzdání. Poslední sloupec nám říká, jestli bylo odevzdané řešení již revidované
 	\item Pod seznamem odevzdaných testů se nachází komponenta s dalšími známkami. Tyto známky nepatří k žádnému testu. 
@@ -130,8 +135,8 @@ Následující podkapitoly obsahují jednotlivé uživatelské scénáře rozeps
 	\item V seznamu testů vybereme ten, který chceme odevzdat.
 	\item Pokud jsme tento test zatím neodevzdali, aplikace nás přesměruje na stránku s odevzdáním daného testu, jak můžeme vidět na obrázku \ref{fig:test-submit}. V případě, že jsme test již odevzdali, zobrazí se stránka s vyhodnoceným řešením.
 	\item V horní části vidíme název testu, deadline -- čas, do kterého je třeba test odevzdat a několik dalších informací. Test následně vyplníme, u některých otázek máme na výběr z možností odpovědí.
-	\item Stisknutím tlačítka Save answers dojde k uložení odpovědí. Můžeme tedy stránku opustit, příp. zavřít a při dalším načtení stránky se načtou i uložené odpovědi.
-	\item Odevzdání testu provádíme pomocí tlačítka Submit. Tato akce je nevratná, po odevzdání testu jej není možné nijak upravovat ani znovu odevzdat.
+	\item Stisknutím tlačítka \textit{Save answers} dojde k uložení odpovědí. Můžeme tedy stránku opustit, příp. zavřít a při dalším načtení stránky se načtou i uložené odpovědi.
+	\item Odevzdání testu provádíme pomocí tlačítka \textit{Submit}. Tato akce je nevratná, po odevzdání testu jej není možné nijak upravovat ani znovu odevzdat.
 	\item Po odevzdání testu jej systém vyhodnotí a aplikace nás přesměruje na stránku s vyhodnoceným řešením.
 \end{itemize}
 
@@ -139,7 +144,7 @@ Následující podkapitoly obsahují jednotlivé uživatelské scénáře rozeps
 
 \begin{itemize}
 	\item Na obrázku \ref{fig:submission-review} vidíme příklad stránky s vyhodnoceným řešením testu.
-	\item Ve vrchní části stránky je komponenta s informacemi o testu. Nachází se zde název testu, informace o tom, jestli je test hodnocený a přesný čas odeslání. Pokud byl test již revidován, nachází se zde i řetězec 'Reviewed'. 
+	\item Ve vrchní části stránky je komponenta s informacemi o testu. Nachází se zde název testu, informace o tom, jestli je test hodnocený a přesný čas odeslání. Pokud byl test již revidován, nachází se zde i řetězec \textit{Reviewed}. 
 	\item Na stránce se dále nachází seznam otázek. U každé otázky se zobrazuje text, udělené body, odeslaná a správná odpověď, a případně i komentář opravujícího.
 	\item Pozadí otázky může mít různé barvy, podle toho, kolik bodů student z otázky získal.
 		\begin{itemize}
@@ -165,9 +170,9 @@ Následující akce mohou vykonávat pouze administrátoři příslušného kurz
  \begin{itemize}
 	\item Přejdeme na stránku daného kurzu.
 	\item Pod sekcí se soubory se nachází komponenty, které obsahují seznamy studentů a administrátorů tohoto kurzu (viz. obrázek \ref{fig:students-admins-list}). 
-	\item Pomocí tlačítka Details můžeme přejít na stránku s detaily tohoto studenta, naopak tlačítko Remove slouží k odstranění osoby z kurzu.
-	\item Pod seznamem studentů se nachází tlačítko Enrollment Requests, které nám umožňuje zobrazit všechny žádostí o zapsání do tohoto kurzu.
-	\item Komponenta s administrátory vypadá podobně, tlačítko Remove slouží k odebrání daného administrátora.
+	\item Pomocí tlačítka \textit{Details} můžeme přejít na stránku s detaily tohoto studenta, naopak tlačítko \textit{Remove} slouží k odstranění osoby z kurzu.
+	\item Pod seznamem studentů se nachází tlačítko \textit{Enrollment Requests}, které nám umožňuje zobrazit všechny žádostí o zapsání do tohoto kurzu.
+	\item Komponenta s administrátory vypadá podobně, tlačítko \textit{Remove} slouží k odebrání daného administrátora.
 	\item Pod seznamem administrátorů se nachází formulář pro přidání nových administrátorů.
 \end{itemize}
 
@@ -183,15 +188,15 @@ Následující akce mohou vykonávat pouze administrátoři příslušného kurz
 \subsection{Sdílení souboru v kurzu}
 \begin{itemize}
 	\item Přejdeme na stránku daného kurzu a najdeme sekci se soubory.
-	\item Ve formuláři pro přidání nového souboru klikneme na tlačítko s textem "Choose file".
+	\item Ve formuláři pro přidání nového souboru klikneme na tlačítko s textem \textit{Choose file}.
 	\item Vybereme soubor, který chceme sdílet a formulář potvrdíme.
 	\item Soubor se následně zobrazí v seznamu sdílených souborů, který je dostupný všem členům kurzu.
-	\item Pokud bychom chtěli soubor následně smazat, klikneme na tlačítko Remove.
+	\item Pokud bychom chtěli soubor následně smazat, klikneme na tlačítko \textit{Remove}.
 \end{itemize}
 
 \subsection{Potvrzení / zamítnutí žádosti o zápis do kurzu}
 \begin{itemize}
-	\item Přejdeme na stránku daného kurzu, najdeme sekci se studenty a klikneme na tlačítko Enrollment requests.
+	\item Přejdeme na stránku daného kurzu, najdeme sekci se studenty a klikneme na tlačítko \textit{Enrollment requests}.
 	\item Aplikace nás přesměruje na stránku, kde se nachází všechny žádosti o zapsání do tohoto kurzu (viz. obrázek \ref{fig:enrollment-requests}).
 	\item U každé žádosti je uveden e-mail osoby a tlačítka pro potvrzení resp. zamítnutí žádosti.
 	\item Pomocí těchto tlačítek můžeme žádost přijmout nebo zamítnout. Pokud žádost přijmeme, aplikace osobu automaticky přidá mezi studenty daného kurzu.
@@ -200,22 +205,22 @@ Následující akce mohou vykonávat pouze administrátoři příslušného kurz
 \subsection{Vytvoření nového testu}
 
 \begin{itemize}
-	\item Přejdeme na stránku daného kurzu, najdeme sekci se seznamem testů a klikneme na tlačítko Create new assignment.
+	\item Přejdeme na stránku daného kurzu, najdeme sekci se seznamem testů a klikneme na tlačítko \textit{Create new assignment}.
 	\item Zobrazí se formulář sloužící k vytvoření testu. 
-	\item Do příslušných políček formuláře vyplníme téma, váhu, deadline a počet otázek testu. Je potřeba také zvolit, jestli se jedná o hodnocený test nebo o kvíz. V případě, že chceme vytvořit hodnocený test, zvolíme hodnotu Yes v otázce Is this assignment graded?.
-	\item Po stisknutí tlačítka Apply se zobrazí formuláře pro jednotlivé otázky, jak můžeme vidět na obrázku \ref{fig:test-create}.
-	\item V případě, že následně chceme změnit počet otázek, změníme hodnotu políčka Question count a potvrdíme stiskem tlačítka Apply.
+	\item Do příslušných políček formuláře vyplníme téma, váhu, deadline a počet otázek testu. Je potřeba také zvolit, jestli se jedná o hodnocený test nebo o kvíz. V případě, že chceme vytvořit hodnocený test, zvolíme hodnotu \textit{Yes} v otázce \textit{Is this assignment graded?}.
+	\item Po stisknutí tlačítka \textit{Apply} se zobrazí formuláře pro jednotlivé otázky, jak můžeme vidět na obrázku \ref{fig:test-create}.
+	\item V případě, že následně chceme změnit počet otázek, změníme hodnotu políčka \textit{Question count} a potvrdíme stiskem tlačítka \textit{Apply}.
 	\item U každé otázky je nejprve potřeba vybrat typ odpovědí. Máme na výběr z těchto hodnot:
 		\begin{itemize}
 			\item textová odpověď
 			\item výběr z nabídky odpovědí
 			\item vícenásobný výběr z nabídky odpovědí
 		\end{itemize}
-	\item Do příslušného políčka vyplníme text otázky. V případě, že se jedná o otázku s výběrem odpovědí, je potřeba vybrat počet možných odpovědí a potvrdit pomocí tlačítka Apply. Poté se zobrazí políčka pro jednotlivé možné odpovědi, označené písmenem. Do těchto políček vyplníme text možných odpovědí. Maximální počet možných odpovědí je deset.
+	\item Do příslušného políčka vyplníme text otázky. V případě, že se jedná o otázku s výběrem odpovědí, je potřeba vybrat počet možných odpovědí a potvrdit pomocí tlačítka \textit{Apply}. Poté se zobrazí políčka pro jednotlivé možné odpovědi, označené písmenem. Do těchto políček vyplníme text možných odpovědí. Maximální počet možných odpovědí je deset.
 	\item Vyplníme správnou odpověď otázky a počet bodů za tuto otázku. V případě, že se jedná o otázku s výběrem odpovědi, jako správnou odpověď zadáme jedno písmeno -- identifikátor možnosti, která je správná. 
 	
-	Pokud jde o otázku s vícenásobným výběrem odpovědí, do políčka pro správnou odpověď zadáme seznam písmen pravdivých možností, oddělených čárkou. Tedy například, pokud máme otázku se správnými odpověďmi A a C, do políčka pro správnou odpověď zadáme řetězec 'A,C'. Pokud je pravdivá pouze jedna odpověď, zadáme pouze jedno písmeno, naopak pokud není pravdivá žádná z odpovědí, necháme políčka pro správnou odpověď prázdné. Ilustrační příklad je na obrázku \ref{fig:question-detail}.
-	\item Vytvoření testu potvrdíme stisknutím tlačítka Create v dolní části stránky.
+	Pokud jde o otázku s vícenásobným výběrem odpovědí, do políčka pro správnou odpověď zadáme seznam písmen pravdivých možností, oddělených čárkou. Tedy například, pokud máme otázku se správnými odpověďmi A a C, do políčka pro správnou odpověď zadáme řetězec \textit{A,C}. Pokud je pravdivá pouze jedna odpověď, zadáme pouze jedno písmeno, naopak pokud není pravdivá žádná z odpovědí, necháme políčka pro správnou odpověď prázdné. Ilustrační příklad je na obrázku \ref{fig:question-detail}.
+	\item Vytvoření testu potvrdíme stisknutím tlačítka \textit{Create} v dolní části stránky.
 	\item Aplikace nás poté přesměruje zpět na stránku příslušného kurzu.
 \end{itemize}
 
@@ -225,31 +230,31 @@ Následující akce mohou vykonávat pouze administrátoři příslušného kurz
 	\item Pokud jsme administrátorem daného kurzu, aplikace nás přesměruje na stránku s detailem testu.
 	\item Na obrázku \ref{fig:test-detail} vidíme, že stránka obsahuje informace o daném testu a seznam otázek.
 	\item V případě, že tento test ještě nebyl publikován, se zobrazí tlačítko, které umožňuje editaci.
-	\item Pokud je test již publikován, ve spodní části stránky se zobrazí sekce Submitted solutions, která obsahuje seznam odeslaných řešení tohoto testu.
-	\item Na obrázku \ref{fig:test-detail} vidíme, že u každého odeslaného řešení se zobrazuje e-mail studenta, který řešení odevzdal, skóre, čas odeslání a informace o tom, jestli bylo dané řešení již revidované. Kliknutím na tlačítko detail se dostaneme na stránku s vyhodnoceným řešením.
+	\item Pokud je test již publikován, ve spodní části stránky se zobrazí sekce \textit{Submitted solutions}, která obsahuje seznam odeslaných řešení tohoto testu.
+	\item Na obrázku \ref{fig:test-detail} vidíme, že u každého odeslaného řešení se zobrazuje e-mail studenta, který řešení odevzdal, skóre, čas odeslání a informace o tom, jestli bylo dané řešení již revidované. Kliknutím na tlačítko \textit{Detail} se dostaneme na stránku s vyhodnoceným řešením.
 \end{itemize}
 
 \subsection{Editace testu}
 \begin{itemize}
-	\item Přejdeme na stránku s detailem daného testu a klikneme na tlačítko s textem Edit. Testy, které již byly publikované, editovat nelze.
+	\item Přejdeme na stránku s detailem daného testu a klikneme na tlačítko s textem \textit{Edit}. Testy, které již byly publikované, editovat nelze.
 	\item Zobrazí se formulář, sloužící k úpravě testu. Na obrázcích \ref{fig:test-edit1} a \ref{fig:test-edit2} vidíme, že vypadá téměř stejně jako formulář pro vytvoření testu.
-	\item V případě, že chceme upravit hodnotu deadline, klikneme na tlačítko Set new deadline a vyplníme příslušné hodnoty. Pomocí tlačítka Cancel aktualizaci hodnoty deadline zrušíme.
-	\item Upravíme požadované hodnoty, pro přidání nové otázky stiskneme tlačítko Add new question, jež se nachází ve spodní části stránky. Pokud chceme nějakou z otázek odebrat, klikneme na tlačítko Delete question.
-	\item Úplně dole se nachází tlačítka pro potvrzení, resp. zrušení změn. Pokud chceme změny potvrdit, stiskneme tlačítko Save, pro zahození změn stiskneme tlačítko Discard.
+	\item V případě, že chceme upravit hodnotu deadline, klikneme na tlačítko Set new deadline a vyplníme příslušné hodnoty. Pomocí tlačítka \textit{Cancel} aktualizaci hodnoty deadline zrušíme.
+	\item Upravíme požadované hodnoty, pro přidání nové otázky stiskneme tlačítko \textit{Add new question}, jež se nachází ve spodní části stránky. Pokud chceme nějakou z otázek odebrat, klikneme na tlačítko \textit{Delete question}.
+	\item Úplně dole se nachází tlačítka pro potvrzení, resp. zrušení změn. Pokud chceme změny potvrdit, stiskneme tlačítko \textit{Save}, pro zahození změn stiskneme tlačítko \textit{Discard}.
 	\item V obou případech nás aplikace přesměruje zpět na stránku s daným testem.
 \end{itemize}
 
 \subsection{Publikace testu}
 \begin{itemize}
 	\item Přejdeme na stránku daného kurzu do sekce s testy.
-	\item U vybraného testu klikneme na tlačítko Publish. Tato akce je nevratná, publikaci testu nelze vrátit.
+	\item U vybraného testu klikneme na tlačítko \textit{Publish}. Tato akce je nevratná, publikaci testu nelze vrátit.
 	\item Po dokončení požadavku se test přidá do skupiny aktivních testů a studenti mohou začít odevzdávat svá řešení.
 \end{itemize}
 
 \subsection{Odstranění testu}
 \begin{itemize}
 	\item Přejdeme na stránku daného kurzu a najdeme sekci s testy.
-	\item U vybraného testu klikneme na tlačítko Delete.
+	\item U vybraného testu klikneme na tlačítko \textit{Delete}.
 	\item Tím dojde ke smazání daného testu.
 \end{itemize}
 
@@ -257,11 +262,11 @@ Následující akce mohou vykonávat pouze administrátoři příslušného kurz
 \begin{itemize}
 	\item Přejdeme na stránku s detailem testu, ve spodní části stránky nalezneme sekci s odeslanými řešeními. Pokud ještě žádný student řešení neodeslal, tato sekce se nezobrazí.
 	\item U vybraného řešení klikneme na tlačítko Detail, tím se dostaneme na stránku s vyhodnoceným řešením.
-	\item Ve spodní část stránky se nachází sekce Review.
-	\item V případě, že nechceme upravit body, ani přidat žádné komentáře, klikneme na tlačítko Mark as reviewed, tím označíme test jako revidovaný.
-	\item Pokud chceme upravit body, či přidat komentáře, stiskneme tlačítko Update. U každé otázky se zobrazí formuláře sloužící k úpravě bodů a přidání komentáře, jak můžeme vidět na obrázku \ref{fig:submission-manual-review}.
+	\item Ve spodní část stránky se nachází sekce \textit{Review}.
+	\item V případě, že nechceme upravit body, ani přidat žádné komentáře, klikneme na tlačítko \textit{Mark as reviewed}, tím označíme test jako revidovaný.
+	\item Pokud chceme upravit body, či přidat komentáře, stiskneme tlačítko \textit{Update}. U každé otázky se zobrazí formuláře sloužící k úpravě bodů a přidání komentáře, jak můžeme vidět na obrázku \ref{fig:submission-manual-review}.
 	\item Vyplníme požadované změny (např. změníme počet získaných bodů u vybrané otázky).
-	\item Pod otázkami se nachází tlačítka pro potvrzení, resp. zrušení změn. Pokud chceme změny potvrdit, stiskneme tlačítko Save, pro zahození změn klikneme na tlačítko Discard.
+	\item Pod otázkami se nachází tlačítka pro potvrzení, resp. zrušení změn. Pokud chceme změny potvrdit, stiskneme tlačítko \textit{Save}, pro zahození změn klikneme na tlačítko \textit{Discard}.
 	\item Aplikace provede požadovanou akci a změny uloží, resp. zahodí.
 \end{itemize}
 
@@ -271,8 +276,10 @@ Následující akce mohou vykonávat pouze administrátoři příslušného kurz
 	\item Pod komponentou s celkovým skóre se nachází formulář pro přidání nové známky (viz. obrázek \ref{fig:grade-add}).
 	\item Vyplníme téma, skóre, váhu a případně i komentář a následně formulář potvrdíme.
 	\item Dojde k vytvoření nové známky, která se přidá do tabulky známek.
-	\item Pokud chceme nějakou ze známek následně smazat, stiskneme příslušné tlačítko Remove.
+	\item Pokud chceme nějakou ze známek následně smazat, stiskneme příslušné tlačítko \textit{Remove}.
 \end{itemize}
+
+\newpage
 
 \begin{figure}
 	\centering
@@ -384,4 +391,18 @@ Následující akce mohou vykonávat pouze administrátoři příslušného kurz
 	\includegraphics[width=\textwidth]{add-grade.PNG}
 	\caption{Formulář pro přidání známky}
 	\label{fig:grade-add}
+\end{figure}
+
+\begin{figure}
+	\centering
+	\includegraphics[width=\textwidth]{confirm-dialog.PNG}
+	\caption{Potvrzovací formulář}
+	\label{fig:confirm-dialog}
+\end{figure}
+
+\begin{figure}
+	\centering
+	\includegraphics[width=\textwidth]{error-dialog.PNG}
+	\caption{Formulář s chybami}
+	\label{fig:error-dialog}
 \end{figure}
