--- a/doc/cs/zaver.tex
+++ b/doc/cs/zaver.tex
@@ -1,6 +1,13 @@
 \chapter*{Závěr}
 \addcontentsline{toc}{chapter}{Závěr}
 
-V této práci jsem se zaměřil na...
+V této práci jsem se zaměřil na vývoj webové aplikace pro správu různých typů výukových kurzů.
 
-TODO: dopsat
+Oproti alternativám jako jsou např. aplikace Bakaláři a Moodle není výsledná aplikace zaměřená jen na školní kurzy, 
+ale můžeme ji snadno použít i pro jiné typy kurzů, jako jsou např. jazykové či zájmové kurzy. 
+Každý uživatel si může v aplikaci vytvářet vlastní kurzy.
+
+Aplikace je rozdělená na serverovou a klientskou část, a naprogramovaná s použitím moderních technlologií, 
+jako např. frameworky ASP.NET Core a Angular. Kód programu je uložený ve veřejném repozitáři na GitHubu.
+
+Detailní popis funkcionality se nachází v uživatelské dokumentaci \ref{UserDoc}.
