--- a/doc/cs/prace.tex
+++ b/doc/cs/prace.tex
@@ -58,6 +58,12 @@
 \usepackage{xcolor}         % barevná sazba
 \usepackage{listings}		% code higlighting
 
+\usepackage{float}
+
+\floatstyle{ruled}
+\newfloat{program}{h}{lop}
+\floatname{program}{Kód}
+
 \graphicspath{ {../img/} }
 
 \definecolor{bluekeywords}{rgb}{0.13,0.13,1}
@@ -245,7 +251,7 @@ Pro spuštění programu je třeba mít nainstalované tyto programy:
 	\item .NET Core SDK verze 3.1
 	\item Node.js verze 12 nebo 14
 	\item lokální instance Microsoft SQL Server databáze
-	\item CLI tools for Entity Framework Core
+	\item nástroj CLI tools for Entity Framework Core
 \end{itemize}
 
 V kořenovém adresáři aplikace zadejte do příkazové řádky nejprve následující příkaz.
@@ -263,6 +269,8 @@ dotnet run
 \end{lstlisting}
 
 Tímto dojde ke spuštění aplikace. Ve výpisu příkazu \textit{dotnet run} na příkazové řádce bychom nyní měli vidět URL, na které se aplikace nachází (typicky je to URL \url{https://localhost:5001}). Otevřeme webový prohlížeč na této URL a následně se zobrazí domovská stránka aplikace.
+
+\section{Generování testovacích dat}
 
 \include{user-doc}
 
