LINQ abbreviation added

--- a/doc/cs/prace.tex
+++ b/doc/cs/prace.tex
@@ -228,6 +228,7 @@ Abstract.
 	\item CI -- Continuous integration
 	\item SQL -- Structured Query Language
 	\item URL -- Uniform Resource Locator
+	\item LINQ -- Language Integrated Query
 	
 \end{itemize}
 
